--- a/Plessi1.html
+++ b/Plessi1.html
@@ -61,14 +61,13 @@ Vignola gli ha intitolato una strada.</big></p><br><br><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/plessi.jpg" width="390" height="650"><br><br><br>
 <p><center><big><big>Plessi nella tarda maturità. Fonte: Raccolta famiglia Plessi.</big></big></center></p><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/plessi3.jpg" width="550" height="650"><br><br><br>
-<p><center><big><big>Alessandro Plessi e il figlio Renato (1878-1954) nella Biblioteca Comunale di Vignola,<br> allora situata in un vasto ambiente del primo piano della rocca, la Sala dei Tronchi d'Albero (foto risalente al 1900 ca.).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
+<p><center><big><big>Alessandro Plessi e il figlio Renato (1878-1954) nella Biblioteca Comunale di Vignola,<br> allora situata in un vasto ambiente del primo piano della rocca, la Sala dei Tronchi d’Albero (foto risalente al 1900 ca.).<br> Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/biblioteca.jpg" width="750" height="550"><br><br><br>
-<p><center><big><big>Decreto di nomina di Plessi a sindaco di Vignola, datato 10 marzo 1860 e firmato da Luigi Carlo Farini,<br> governatore delle Regie Provincie dell'Emilia. Fonte: Raccolta famiglia Plessi.</big></big></center><br>
+<p><center><big><big>Decreto di nomina di Plessi a sindaco di Vignola, datato 10 marzo 1860 e firmato da Luigi Carlo Farini,<br> governatore delle Regie Provincie dell’Emilia. Fonte: Raccolta famiglia Plessi.</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/nomina.jpg" width="500" height="680"><br><br><br>
-
-<p><center><big><big>Il palazzo avito dei Plessi, a Vignola, recentemente immortalato da Via Garibaldi (fino al 1882, Via Maggiore). <br> L’accesso, qui non visibile, era ed è tuttora situato sul lato posto lungo Via Bonesi <br> (fino al 1865, Contrada di Mezzo; poi, per poco più di 80 anni, Via Cantelli).</big></big></center><br>
+<p><center><big><big>Il palazzo avito dei Plessi, a Vignola, recentemente immortalato da Via Giuseppe Garibaldi (detta, fino al 1882, Via Maggiore).<br> L’accesso, qui non visibile, era ed è tuttora situato sul lato posto lungo Via Vermilio Bonesi<br>
+(denominata, fino al 1865, Contrada di Mezzo; fino al 1922, Via Giacomo Cantelli; fino al 1945, Via Aurelio Sanley).</big></big></center><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/palazzo.jpg" width="680" height="520"><br><br><br>
-
 <center><big><big>Cappella funebre di Plessi, cimitero di Vignola.<br> Il busto fu eseguito da Giuseppe Graziosi (1879-1942), mentre l’iscrizione venne dettata da Tommaso Casini (1859-1917).</center></big></big><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/Tomba intera.jpg" width="500" height="600"><br><br><br>
 <center><big><big>Busto modellato da Graziosi.</center></big></big><br>
