--- a/Novità.html
+++ b/Novità.html
@@ -42,8 +42,13 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Tufo in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
 	
+<p><big><big><span style="text-decoration: underline;">15 gennaio 2023</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA FIDANZATA</strong></i>, la ventiquattresima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Una leggiadra e castissima fanciulla arrivò finalmente alla vigilia de’ suoi sponsali, statile lungamente contrastati da un perverso tutore, il quale faceva indegnamente suo utile delle splendide fortune di lei. Oh di che dolce e piena letizia le sorrise l’anima dopo la certezza che nel giorno vegnente sarebbe cessata la sua dura servitù! Oh io sarò domani congiunta con nodo indissolubile al mio diletto; e nessuno sorgerà più ad inventare nuovi impedimenti che mi tolgano di possederlo! Beata me nell’avvenire giocondo che mi si dischiude innanzi dopo le molte sofferenze ed i frequenti sospiri.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
+	
 <p><big><big><span style="text-decoration: underline;">6 gennaio 2023</span></big></big></p><br><br>
-<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL FRINGUELLO VIAGGIATORE</strong></i>, la ventiduesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL FRINGUELLO VIAGGIATORE</strong></i>, la ventitreesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Una giovane rondine, nel ritorno dal suo primo passaggio, fu ricevuta con liete e festose accoglienze da tutti gli uccelli suoi amici; i quali, non appena sentirono il primo alito di aere intepidito, stettero in sull’aspettarla, bramasi di udire da lei le nuove dei lontani paesi a cui peregrinò. Fu un garrire dei più confusi intorno a lei, un saltellare, uno svolazzare dei più inquieti e curiosi, da che ciascuno volevale andare più accosto degli altri, affine di cogliere dalla voce di lei direttamente i ragguagli delle meraviglie osservate e degli accidenti occorsi.»<br>
 Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
 
