--- a/gennaio.html
+++ b/gennaio.html
@@ -56,12 +56,24 @@ Nelle immagini sottostanti, le decorazioni che sovrastano il vano dello scalone 
 <img src="img/celebri vignolesi/Minghelli/soffitto2.jpg" width="750" height="550"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Pietro Minghelli?<br>Allora, visita il suo <a href="Minghelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
+<p><big><strong>13 gennaio 1923</strong>: morì a Vignola <strong>LUIGI GAZZOTTI</strong>, compositore musicale. Fu sepolto nel cimitero cittadino.<br><br> 
+
+Luigi Gazzotti venne al mondo il 30 gennaio 1886 a Modena, città che diede i natali anche ai genitori, Emilio (1860-1922) e Giovanna Gibellini (1858-1945). Il padre – avvocato, sindaco di Vignola (1906-1907) e consigliere della Cassa di Risparmio di Vignola (1896-1897, 1909-1912) – intrattenne per tutta la vita amichevoli rapporti con notabili, letterati, artisti e musicisti; la figura più illustre fra quelle che erano di casa nella Villa Galvani, l’elegante dimora vignolese di famiglia, fu Giosuè Carducci (1835-1907).<br>
+Diplomatosi in Composizione al Liceo Musicale “Gioachino Rossini” di Bologna nel 1913 con il celebre maestro Luigi Torchi (1858-1920), Gazzotti si procurò ben presto una certa fama nei campi della musica sacra, della musica sinfonica e della musica popolare; il suo principale interesse, comunque, fu rivolto al teatro d’opera. La breve carriera del nostro personaggio, troncata dalla morte quando egli stava mietendo crescenti successi in tutta Italia, fu contraddistinta da composizioni spesso originali ed eleganti, così come da una grande facilità di scrittura.<br>
+Gazzotti visse per lunghi periodi a Vignola, abitando nella Villa Galvani. All’interno dell’annesso giardino pensile, venne ricavato un “teatro verde” che accolse la messa in scena di opere in musica anche di suo pugno.<br>
+Nel 1923, pochi mesi dopo la prematura scomparsa di Gazzotti, gli fu intitolata a Modena una corale, che esiste tuttora e che – anzi – ha nel tempo visto accrescere tanto il repertorio al proprio attivo quanto la notorietà in ambito nazionale e non solo.<br><br> 
+
+Nell’immagine sottostante, la tomba della famiglia Gazzotti (cimitero di Vignola) dove riposa il compositore.</big></p><br><br>
+<img src="img/celebri vignolesi/Gazzotti/tomba.jpg" width="430" height="720"><br><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Luigi Gazzotti?<br>Allora, visita il suo <a href="Gazzotti.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
+
+
 <p><big><strong>16 gennaio 1986</strong>: morì a Vignola l’artista <strong>GIANCARLO DUGHETTI</strong>. Fu sepolto nel cimitero di Campiglio di Vignola; nel 2018 le sue spoglie vennero traslate al camposanto di Vignola Capoluogo.<br><br>
 Giancarlo Dughetti nacque a Firenze il 10 marzo 1931 e mostrò fin da bambino eccezionale attitudine al disegno, non diversamente dal fratello Roberto (1938-2006), che ebbe un’encomiabile carriera come pittore e incisore. Entrato nello studio di Pietro Annigoni (1910-1988), il nostro personaggio ne assorbì i preziosi insegnamenti e, unico tra i suoi ex allievi, con il tempo si specializzò soprattutto nell’arte della miniatura, diventandone uno degli indiscussi maestri italiani del Novecento.<br>
 Dughetti partecipò a numerose mostre ed esposizioni nazionali e internazionali. Sue opere sono presenti in molti musei pubblici e collezioni private di tutto il mondo. Tra le miniature più celebri dell’artista toscano, figura indubbiamente l’effigie su avorio – realizzata dal vivo nel 1980 – del papa Giovanni Paolo II, oggi custodita nelle Collezioni Pontificie dei Palazzi Vaticani. Egli ricevette commesse per ritratti in miniatura anche da nobili, politici e industriali non soltanto italiani, e perfino dallo scià di Persia Mohammed Reza Pahlavi (1919-1980), di passaggio a Firenze nel 1964.<br> 
 Dughetti visse e lavorò a lungo sulle colline di Campiglio. Contrasse matrimonio nel 1962 con Anna Romagnoli (n. 1936), che aveva conosciuto nel 1956 e che fu la sua musa e la sua modella preferita; dall’unione nacque nel 1965 la figlia Simonetta.<br><br>
 Nell’immagine sottostante, la tomba del celebre artista al cimitero di Vignola Capoluogo.</big></p><br><br>
-<img src="img/celebri vignolesi/Dughetti/tomba.jpg" width="480" height="550"><br><br><br><br>
+<img src="img/celebri vignolesi/Dughetti/tomba.jpg" width="480" height="550"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giancarlo Dughetti?<br>Allora, visita il suo <a href="Dughetti.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
   
   
@@ -107,10 +119,20 @@ Nell’immagine sottostante, ritratto fotografico di Neri proveniente da <i>Arso
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center></big></p><br><br> 
   
 <p><big><big><strong><center>Vuoi saperne di più su Nèttore Neri?<br> Allora, visita il suo <a href="Neri2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>  
+
+<p><big><strong>30 gennaio 1886</strong>: nacque a Modena <strong>LUIGI GAZZOTTI</strong>, compositore musicale.<br><br>
+
+Figlio dell’influente avvocato Emilio (1860-1922), che nel 1906-1907 fu sindaco di Vignola, e di Giovanna Gibellini (1858-1945), Luigi Gazzotti conseguì nel 1913 il diploma in Composizione presso il Liceo Musicale “Gioachino Rossini” di Bologna sotto la guida dell’illustre Luigi Torchi (1858-1920). Nel corso della carriera, durata appena un decennio, il nostro personaggio si distinse come autore elegante, originale e prolifico nei campi della musica sacra, della musica sinfonica e della musica popolare; le sue preferenze, in ogni caso, andarono al teatro d’opera.<br>
+Il compositore trascorse buona parte della sua breve esistenza a Vignola, abitando nella Villa Galvani. L’annesso giardino pensile diventò la sede di un “teatro verde”, dove erano proposte – per un pubblico scelto – diverse opere musicali, anche dello stesso Gazzotti.<br>
+Il nostro personaggio morì a Vignola il 13 gennaio 1923 e venne inumato nel cimitero cittadino. Pochi mesi più tardi, fu fondata a Modena una corale che prese il suo nome e che è tuttora pienamente attiva.<br><br>
+Nell’immagine qui sotto, il compositore intorno ai venticinque anni. Questa fotografia è tratta da Pierluigi Albertini, <i>Luigi Gazzotti (1886-1923). La vita</i>, in AA.VV., <i>Luigi Gazzotti un musicista… ritrovato. 1886-1923. 90° anniversario della morte</i>, Centro Studi Vignola, Savignano sul Panaro (MO), Tipolitografia F.G., 2013, pp. 8-10: 8.</big></p><br><br>
+<img src="img/celebri vignolesi/Gazzotti/gazzotti.jpg" width="470" height="600"><br><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Luigi Gazzotti?<br>Allora, visita il suo <a href="Gazzotti.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
+
   
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
