--- a/Gazzotti.html
+++ b/Gazzotti.html
@@ -34,6 +34,12 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
+<p><big><big><center>Fotografia che ritrae Gazzotti intorno ai vent'anni. Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/ventanni.jpg"></p><br>
+
+<p><big><big><center>Altra fotografia che ritrae Gazzotti intorno ai vent'anni. Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/ventanni2.jpg"></p><br>
+
 <p><big><big><center>Fotografia che ritrae il compositore intorno ai venticinque anni.<br> Fonte: Pierluigi Albertini, <i>Luigi Gazzotti (1886-1923). La vita</i>, <br> in AA.VV., <i>Luigi Gazzotti un musicista… ritrovato. 1886-1923. 90° anniversario della morte</i>,<br> Centro Studi Vignola, Savignano sul Panaro (MO), Tipolitografia F.G., 2013, pp. 8-10: 8.</center></big></big></p>
 <img src="img/celebri vignolesi/Gazzotti/gazzotti.jpg" width="470" height="600"></p><br>
 
@@ -47,7 +53,7 @@
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
