--- a/Gazzotti.html
+++ b/Gazzotti.html
@@ -34,10 +34,10 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
-<p><big><big><center>Fotografia che ritrae Gazzotti intorno ai vent'anni. Fonte: google.com</center></big></big></p>
+<p><big><big><center>Fotografia che ritrae Gazzotti intorno ai vent’anni. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Gazzotti/ventanni.jpg"></p><br>
 
-<p><big><big><center>Altra fotografia che ritrae Gazzotti intorno ai vent'anni. Fonte: google.com</center></big></big></p>
+<p><big><big><center>Altra fotografia che ritrae Gazzotti intorno ai vent’anni. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Gazzotti/ventanni2.jpg"></p><br>
 
 <p><big><big><center>Fotografia che ritrae il compositore intorno ai venticinque anni.<br> Fonte: Pierluigi Albertini, <i>Luigi Gazzotti (1886-1923). La vita</i>, <br> in AA.VV., <i>Luigi Gazzotti un musicista… ritrovato. 1886-1923. 90° anniversario della morte</i>,<br> Centro Studi Vignola, Savignano sul Panaro (MO), Tipolitografia F.G., 2013, pp. 8-10: 8.</center></big></big></p>
