--- a/Plessi2.html
+++ b/Plessi2.html
@@ -40,7 +40,7 @@ Sappiamo, comunque, alcune cose con certezza. Tra le più significative, vanno m
 <img src="img/celebri vignolesi/Plessi Giuseppe Antonio/incipit.jpg" width="420" height="630"><br><br>
 <p><strong><big><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
