--- a/Muratori.html
+++ b/Muratori.html
@@ -76,6 +76,8 @@
 	
 <p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
+<p><center><big><big>Monumento con statua di Muratori (1853), opera di Adeodato Malatesta collocata a Modena, in Via Emilia Centro.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/viaemilia.jpg" width="285" height="610"><br><br><br>	
 <p><center><big>C.A. [Claudio Artaria (1818-1872)], ritratto postumo di Lodovico Antonio Muratori, incisione, a partire dal<br> ritratto esistente nella Venerabile Biblioteca Ambrosiana di Milano. Fonte: <i>Iconografia dei celebri vignolesi.<br> Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839.<br> Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole<br> (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato,<br> ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br> <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Artaria apre la dispensa su Muratori, <br>il cui testo scritto è firmato in calce da Gianfrancesco Galeani Napione.</big></center><br>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori incisione.jpg" width="400" height="680"><br><br><br>
 <p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
@@ -116,7 +118,7 @@
 	
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
