--- a/Gazzotti.html
+++ b/Gazzotti.html
@@ -36,7 +36,7 @@
 
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><strong>AA.VV.</strong>: <strong><i>Luigi Gazzotti un musicista… ritrovato. 1886-1923. 90° anniversario della morte</i></strong>, Centro Studi Vignola, Savignano sul Panaro (MO), Tipolitografia F.G., 2013.</big></p>
-	<p><big><strong>ALBERTINI, Pierluigi</strong> (<strong>testo</strong>) - <strong>POPOLI, Tiziano</strong> (<strong>note critiche</strong>): <strong><i>Luigi Gazzotti. 1886-1923. I Centenario della nascita</i></strong>, s.l. [ma: Vignola (MO)], s.n. [ma: Comune di Vignola, Centro Stampa del Comune], 1986.</big></p><br><br><br> 
+	<p><big><strong>ALBERTINI, Pierluigi (testo)</strong> - <strong>POPOLI, Tiziano (note critiche): <strong><i>Luigi Gazzotti. 1886-1923. I Centenario della nascita</i></strong>, s.l. [ma: Vignola (MO)], s.n. [ma: Comune di Vignola, Centro Stampa del Comune], 1986.</big></p><br><br><br> 
 	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
 <p><big><big><center>Fotografia che ritrae Gazzotti intorno ai vent’anni. Fonte: google.com</center></big></big></p>
