--- a/Muratori.html
+++ b/Muratori.html
@@ -74,7 +74,7 @@
  	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 	
-<p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p>
+<p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese<br> Adeodato Malatesta (1806-1891). È attualmente collocata nell’atrio della Villa Tosi Bellucci,<br> dal 1916 Residenza Municipale di Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p class="index-p3"><center><big>Monumento con statua marmorea di Muratori (1853),<br> opera di Adeodato Malatesta collocata a Modena, in Via Emilia Centro.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/viaemilia.jpg" width="275" height="600"><br><br><br>
