--- a/gennaio.html
+++ b/gennaio.html
@@ -114,7 +114,7 @@ Entrato in Magistratura nel 1920, Nèttore Neri fu pretore di Vignola dal 1924 a
 Neri morì a Vignola il 24 giugno 1970 (in alcune sedi, viene erroneamente indicato il giorno successivo). Le ceneri riposano nel locale camposanto, all’interno della cappella di famiglia.<br>
 Era il padre di <strong>Attilio Neri</strong> (1921-2009), figura di primissimo piano nella società vignolese della seconda metà del Novecento e del principio degli anni Duemila.<br><br>
 
-Nell’immagine sottostante, ritratto fotografico di Neri proveniente da <i>Arsoj. Biòjch rumagnoli cun dò parol d’Spaldo</i> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparèja A. Monti d’E. Fabbri, 1939. «Spaldo» è Aldo Spallicci.<br>
+Nell’immagine sottostante, ritratto fotografico di Neri proveniente da <i>Arsoj. Biòjch rumagnoli cun dò parol d’Spaldo</i> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparèja A. Monti d’E. Fabbri, 1939. «Spaldo» è Aldo Spallicci.<br><br>
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center></big></p><br><br> 
   
 <p><big><big><strong><center>Vuoi saperne di più su Nèttore Neri?<br> Allora, visita il suo <a href="Neri2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>  
