--- a/gennaio.html
+++ b/gennaio.html
@@ -115,7 +115,7 @@ Uomo di profonda cultura, Neri si fece apprezzare nelle cerchie intellettuali it
 Neri morì a Vignola il 24 giugno 1970 (in alcune sedi, viene erroneamente indicato il giorno successivo). Le ceneri riposano nel locale camposanto, all’interno della cappella di famiglia.<br>
 Era il padre di <strong>Attilio Neri</strong> (1921-2009), figura di primissimo piano nella società vignolese della seconda metà del Novecento e del principio degli anni Duemila.<br><br>
 
-Nell’immagine sottostante, di Nèttore Neri proveniente dalla sua raccolta poetica <i>Arsoj. Biöjch rumagnoli cun dò parol d’Spaldo</i> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparéja A. Monti d’E. Fabbri, 1939; è una tavola fuori testo, collocata subito prima di un breve scritto senza titolo di Aldo Spallicci, da considerarsi l’introduzione all’opera (pp. [I]-III). «Spaldo» era un soprannome dello stesso Spallicci.<br><br>
+Nell’immagine sottostante, ritratto fotografico di Nèttore Neri proveniente dalla sua raccolta poetica <i>Arsoj. Biöjch rumagnoli cun dò parol d’Spaldo</i> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparéja A. Monti d’E. Fabbri, 1939; è una tavola fuori testo, collocata subito prima di un breve scritto senza titolo di Aldo Spallicci, da considerarsi l’introduzione all’opera (pp. [I]-III). «Spaldo» era un soprannome dello stesso Spallicci.<br><br>
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center></big></p><br><br> 
   
 <p><big><big><strong><center>Vuoi saperne di più su Nèttore Neri?<br> Allora, visita il suo <a href="Neri2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>  
