--- a/aprile.html
+++ b/aprile.html
@@ -35,7 +35,7 @@
 L’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi; il terzo e il settimo, invece, sono settenari. Lo schema delle rime è ABcBACdD.</big></p>
  <p><big>Nell’immagine sottostante, l’<i>incipit</i> di <i>Canto a Vignola</i>. Fonte: google.com</big></p><br>
 <img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="420" height="650"><br><br><br>
-<p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
 <p><big><strong>2 aprile 1954</strong>: morì a Modena <strong>MARIO PELLEGRINI</strong>, alto ufficiale della Marina Militare del Regno d’Italia ed eroe di guerra.<br><br>
 Nato a Vignola il 7 dicembre 1880, ma cresciuto a Scandiano (Reggio Emilia), Mario Pellegrini partecipò alla Guerra Italo-Turca (1911-1912) e alla Prima Guerra Mondiale (1915-1918). Durante quest’ultima, egli ricevette la Croce di Guerra, la Medaglia d’Argento e – a seguito dell’audace tentativo di forzamento nelle acque del porto di Pola, avvenuto il 14 maggio 1918 – la Medaglia d’Oro al Valor Militare. Tornato in Patria a conflitto concluso dopo sei mesi e mezzo di prigionia (28 novembre 1918), Pellegrini fu promosso capitano di fregata per merito di guerra. Nel 1925 egli viene nominato capitano di vascello e tre anni più tardi lasciò il servizio attivo su sua domanda, poi diventò contrammiraglio di Divisione nella Riserva Navale (1932) e, infine, ammiraglio di Divisione nella stessa (1936).<br><br>
@@ -83,7 +83,7 @@ i non banali tentativi di rinnovamento del gusto teatrale ed estetico, per i pen
 Paradisi morì a Reggio Emilia il 19 febbraio 1783. Venne sepolto nella locale chiesa di San Domenico.<br><br>
 Nell’immagine qui sotto, lapide apposta sul muro della rocca di Vignola (accanto al portone d’ingresso), per ricordare che il nostro personaggio nacque all’interno di essa il 26 aprile 1736.</p><br><br>
 <img src="img/celebri vignolesi/Paradisi/lapide.jpg" width="800" height="600"><br><br><br>
-<p><strong><big><center>Vuoi saperne di più su Agostino Paradisi il Giovane?<br>Allora, visita il suo <a href="Paradisi Agostino.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><strong><big><center>Vuoi saperne di più su Agostino Paradisi il Giovane?<br>Allora, visita il suo <a href="Paradisi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p><strong>28 aprile 2009</strong>: <strong>conferimento della cittadinanza vignolese ai membri della benemerita famiglia Borsari-Bartoli</strong>, la quale <strong>nel 1996 aveva deciso di donare al Comune di Vignola l’archivio dell’avo Francesco Selmi</strong> (1817-1881), celebre personaggio vignolese dell’Ottocento la cui fama di chimico oltrepassò i confini nazionali e il cui ruolo nel Risorgimento italiano fu di notevole importanza.<br><br>
 Selmi lasciò una ricca documentazione costituita di missive, manoscritti e opere a stampa, concernente sia le sue molteplici attività sia le vicende familiari. La donazione iniziale fu in seguito integrata con ulteriori significativi conferimenti di raccolte conservate dalla stessa famiglia Borsari-Bartoli, tra le quali spiccano particolarmente la vetreria del laboratorio di Selmi e il Fondo fotografico Mario Borsari (marito della nipote dell’illustre personaggio), composto in larga parte di immagini inedite riguardanti la Prima Guerra Mondiale.<br>
@@ -94,7 +94,7 @@ L’immagine qui sotto riproduce la fotografia scattata il 28 aprile 2009 durant
 </p>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
