--- a/giugno.html
+++ b/giugno.html
@@ -75,7 +75,7 @@ L’anno dopo avere elaborato un progetto per l’ingrandimento della chiesa par
 
 Nell’immagine sottostante, l’<i>Autoritratto</i> di Giuseppe Maria Soli (il quadro ha subìto un restauro conservativo nel 2015).</p><br><br>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="500" height="670"><br><br><br>
-<p><strong><big><center>Vuoi saperne di più su Giuseppe Maria Soli?<br>Allora, visita il suo <a href="Soli Giuseppe Maria.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><strong><big><center>Vuoi saperne di più su Giuseppe Maria Soli?<br>Allora, visita il suo <a href="Soli1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p class="index-p3"><strong>24 giugno 1970</strong> (in alcune sedi, sbagliando, si posticipa la data di un giorno): morì a Vignola <strong>NÈTTORE NERI</strong>, magistrato e poeta. Le sue spoglie riposano presso il cimitero cittadino, nella cappella di famiglia.<br><br> 
 
