--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -47,8 +47,8 @@ Nell’anno della ricorrenza secolare della sua nascita, la sera del 15 dicembre
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br>
 
 <p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.
-Fonte: Augusta Redorici Roffi - Maria Grazia Grilli,<br> <i>Il molino di Campiglio e il molino di Tavernelle</i>, in Giampaolo Grandi (a cura di), <i>Con la Forza dell’Acqua. Storie d’acque, di opifici,<br> di lavoro e di uomini sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
-progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
+Fonte: Augusta Redorici Roffi - Maria Grazia Grilli,<br> <i>Il molino di Campiglio e il molino di Tavernelle</i>, in Giampaolo Grandi (a cura di), <i>Con la Forza dell’Acqua. Storie<br> d’acque, di opifici, di lavoro e di uomini sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
+progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P. [MO], Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>
 
 <p><center><big>La Redorici Roffi nella tarda maturità. Fonte: volantino cartaceo dell’iniziativa allestita<br> il 15 dicembre 2022 nel Museo Civico a lei intitolato (vedi più sotto la locandina completa in formato digitale).</big></center></p>
@@ -61,7 +61,7 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <i>Tavernelle. Testimonianze e ricordi</i> (s.l., s.n. [Modena, Lito-Tipografia Paltrinieri], s.d. [ma: 1992]).</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Tavernelle.jpg" width="480" height="680"><br><br>
 
-<p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000.</big></center></p>
+<p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola [MO], Libreria “dei Contrari”, 2000.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="480" height="730"><br><br>
 
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi (per la precisione, si tratta dell’ultimo, pubblicato postumo):<br> 
@@ -74,7 +74,7 @@ Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Gr
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="500" height="700"><br><br>
 
 <p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi<br> presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="470" height="690"><br><br>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/locandina.jpg" width="470" height="690"><br><br>
 
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
