--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -74,7 +74,7 @@ Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Gr
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="500" height="700"><br><br>
 
 <p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi<br> presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/locandina.jpg" width="470" height="690"><br><br>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="470" height="690"><br><br>
 
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
