--- a/Pippo.html
+++ b/Pippo.html
@@ -32,7 +32,7 @@
 <h3><center><big><big>DOMENICO SIMONINI</big></big><br><br>
 	<big>(n. 1952)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
-	<p><big><strong>DOMENICO SIMONINI</strong> nacque a Vignola</big></p><br><br><br>
+	<p><big></big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA E SITOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><strong>DE GRADA</strong> [<strong><i>junior</i></strong>]<strong>, Raffaele</strong>: <strong><i>Domenico Simonini</i></strong>, Catalogo della Mostra Personale (Rovereto [TN], Palazzo Rosmini-Serbati, Centro “Clesio-Rosmini”, 5-20 maggio 1979), a cura della Galleria d’Arte “Jacopo Barozzi” di Vignola (MO) diretta da Emilio Ballestri e Franco Cuoghi, s.l., s.n. (Savignano sul Panaro [MO], Tipolitografia F.G.), 1978.</big></p>
