--- a/febbraio.html
+++ b/febbraio.html
@@ -46,8 +46,8 @@ Nell’immagine che segue, sopraccoperta (sulla prima di copertina) della prima 
 	
 	
 <p><big><strong>12 febbraio 1615</strong>: giorno in cui probabilmente morì a Modena <strong>GIULIO TASSONI</strong>, filosofo e medico. Se la data è quella corretta, la salma venne inumata nella locale chiesa di Sant’Agostino.<br><br> 
-Di Giulio Tassoni si sa molto poco. Nacque a Vignola in data sconosciuta e si laureò nel 1587 in Filosofia all’Università di Bologna, presso la quale l’anno seguente iniziò a insegnare Logica, passando nel 1591 alla cattedra di Filosofia; nella città petroniana, figurò tra gli animatori di due Accademie, quella dei Concordi e quella dei Perseveranti. Per qualche tempo, fu medico nel paese natale.<br>
-Durante la vita, Tassoni godette di una certa notorietà in seno alle cerchie intellettuali italiane soprattutto grazie al suo breve libro <i>Microcosmographia, seu parui mundi Breuis descriptio iuxta tres scientias Philosophiam, Medicinam, & Sacram Theologiam</i> (1588). <br><br>
+Di Giulio Tassoni si sa molto poco. Nacque a Vignola in data sconosciuta e si laureò nel 1587 in Filosofia all’Università di Bologna, presso la quale l’anno seguente iniziò a insegnare Logica, passando nel 1591 alla cattedra di Filosofia; nella città petroniana, figurò tra gli animatori di due Accademie, quella dei Concordi e quella dei Perseveranti. Per un certo periodo, fu medico nel paese natale.<br>
+Durante la vita, Tassoni godette di una qualche notorietà in seno alle cerchie intellettuali italiane soprattutto grazie al suo breve libro <i>Microcosmographia, seu parui mundi Breuis descriptio iuxta tres scientias Philosophiam, Medicinam, & Sacram Theologiam</i> (1588). <br><br>
 Nell’immagine qui sotto, frontespizio della <i>Microcosmographia</i> (1588) di Giulio Tassoni. Fonte: google.com</big></p><br><br>
 <img src="img/celebri vignolesi/Tassoni/tassoni.jpg" width="440" height="550"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giulio Tassoni?<br>Allora, visita il suo <a href="Tassoni.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
