--- a/Pippo.html
+++ b/Pippo.html
@@ -28,14 +28,12 @@
 </header>
 <section>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
-	<p><center><strong><big><big><big><big><span style="text-decoration: underline;">LA PAGINA È ATTUALMENTE IN COSTRUZIONE</span></big></big></big></big></center></strong></p><br><br><br>
+	
 <h3><center><big><big>DOMENICO SIMONINI</big></big><br><br>
 	<big>(n. 1952)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
-	
-<p><big><strong>DOMENICO</strong> (detto <strong>Pippo</strong>) <strong>SIMONINI</strong> è nato a Vignola il 18 ottobre 1952. Pittore e incisore di statura internazionale, egli viene unanimemente riconosciuto come uno dei grandi maestri contemporanei nel campo del realismo figurativo. Sue opere sono presenti in musei pubblici e collezioni private di tutto il mondo.<br>
-
-Secondo figlio di Giacomo (1913-1995), docente di Disegno alle Scuole Medie e pittore, e di Marta Magni (1924-2004), maestra elementare, questo personaggio è vissuto fino ai 6 anni a San Polo di Castelvetro di Modena e, successivamente, a Vignola. Egli ha cominciato molto presto a interessarsi alle arti figurative sull’esempio del padre e dello zio Giuseppe (1901-1994), il quale godeva di una certa fama come fotografo e – da autodidatta – si era formato nel tempo una vasta cultura in ambito artistico. Simonini si è iscritto all’Istituto d’Arte “Adolfo Venturi” di Modena (1966) e poi all’Accademia di Belle Arti di Bologna (1970), maturando l’idea di tentare la carriera di pittore. Nel 1971, quando stava muovendo i primi passi autonomi nel mondo dell’arte, il nostro personaggio ha intrapreso una fortunata carriera musicale come batterista nella rock band <i>Charisma</i> (ribattezzata, nel 1974, <i>Azienda Tranviaria</i>). Una volta conseguito il diploma accademico (1974) e assolto il servizio militare a Pesaro (1974-1975), egli ha cominciato a esporre nel Modenese, ottenendo un così incoraggiante successo da convincersi ad abbandonare la strada della musica.<br>
+	<p><big><strong>DOMENICO</strong> (detto <strong>Pippo</strong>) <strong>SIMONINI</strong> è nato a Vignola il 18 ottobre 1952. Pittore e incisore di statura internazionale, egli viene unanimemente riconosciuto come uno dei grandi maestri contemporanei nel campo del realismo figurativo. Sue opere sono presenti in musei pubblici e collezioni private di tutto il mondo.<br>
+	Secondo figlio di Giacomo (1913-1995), docente di Disegno alle Scuole Medie e pittore, e di Marta Magni (1924-2004), maestra elementare, questo personaggio è vissuto fino ai sei anni a San Polo di Castelvetro di Modena e, successivamente, a Vignola. Egli ha cominciato molto presto a interessarsi alle arti figurative sull’esempio del padre e dello zio Giuseppe (1901-1994), il quale godeva di una certa fama come fotografo e – da autodidatta – si era formato nel tempo una vasta cultura in ambito artistico. Simonini si è iscritto all’Istituto d’Arte “Adolfo Venturi” di Modena (1966) e poi all’Accademia di Belle Arti di Bologna (1970), maturando l’idea di tentare la carriera di pittore. Nel 1971, quando stava muovendo i primi passi autonomi nel mondo dell’arte, il nostro personaggio ha intrapreso una fortunata carriera musicale come batterista nella rock band <i>Charisma</i> (ribattezzata, nel 1974, <i>Azienda Tranviaria</i>). Una volta conseguito il diploma accademico (1974) e assolto il servizio militare a Pesaro (1974-1975), egli ha cominciato a esporre nel Modenese, ottenendo un così incoraggiante successo da convincersi ad abbandonare la strada della musica.<br>
 
 Per la carriera artistica di Simonini, il 1978 e il 1979 sono stati gli anni della svolta: le sue mostre personali di Trento e Rovereto (TN), promosse dalla Galleria d’Arte “Jacopo Barozzi” di Vignola diretta da Emilio Ballestri (n. 1928) e Franco Cuoghi, hanno raccolto larghi e significativi consensi, e ciò ha favorito l’organizzazione di una serie di antologiche, che sono state allestite – di nuovo, con l’appoggio della suddetta galleria vignolese – fra il 1980 e il 1982 a Vienna, Monaco di Baviera, Bruxelles, Amburgo, Parigi e Milano. Nell’ambito di quest’ultimo evento, il giovane pittore ha avuto l’opportunità di conoscere di persona Raffaele De Grada <i>junior</i> (1916-2010), insigne storico dell’arte e critico d’arte che di lui aveva già scritto in termini elogiativi più volte in precedenza. Anche grazie al sostegno di De Grada e di sua moglie Maria Luisa Simone (n. 1938), pittrice, il Vignolese ha deciso di stabilirsi a Milano, dove è presto entrato in contatto con il fior fiore del mondo culturale meneghino, stringendo anche importanti e fruttuose amicizie. Tra di esse, va segnalata almeno quella con il giornalista e intellettuale Ruggiero Jannuzzelli (n. 1938), appassionato d’arte; questi, che era (ed è tuttora) proprietario del castello di Montesegale, nell’Oltrepò pavese, ha invitato Simonini a trasferirsi in un edificio di quel castello, e lì il nostro personaggio effettivamente ha abitato e lavorato per molti periodi fino al 1991, incontrando nei fine settimana i numerosi ospiti illustri di Jannuzzelli (non solo artisti, ma anche teologi, filosofi, poeti, scrittori, giornalisti, sociologi, etologi ecc.).<br>
 
@@ -46,7 +44,6 @@ Tra il 1991 e il 2006, Simonini ha risieduto a Parigi (Montparnasse), dove ha di
 Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora nel paese natale, seguitando con successo l’attività di pittore realista, partecipando a numerose esposizioni e rassegne personali e collettive in varie località della Penisola (una delle antologiche più ampie e di maggior interesse è stata quella tenutasi a Montesegale nel 2015), mantenendo i rapporti con diversi ambienti artistici e allacciando sempre nuovi legami in quel mondo, nonché incoraggiando e promuovendo giovani artisti. A Vignola il nostro personaggio è stato ed è tuttora una delle figure di spicco dell’associazione <i>Amici dell’Arte</i>, che egli ha contribuito a fondare nel 1990 (inizialmente sotto il nome di <i>Arti Visive</i>), e uno degli organizzatori delle mostre che tale gruppo dalla fine di quell’anno allestisce negli spazi espositivi conosciuti come <i>Il Salotto di L.A. Muratori</i> e ubicati a pianoterra della Casa Natale di <strong>Lodovico Antonio Muratori</strong>.</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA E SITOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
-
 <p><big><strong>DE GRADA</strong> [<strong><i>junior</i></strong>]<strong>, Raffaele</strong>: <strong><i>Domenico Simonini</i></strong>, Catalogo della Mostra Personale (Rovereto [TN], Palazzo Rosmini-Serbati, Centro “Clesio-Rosmini”, 5-20 maggio 1979), a cura della Galleria d’Arte “Jacopo Barozzi” di Vignola (MO) diretta da Emilio Ballestri e Franco Cuoghi, s.l., s.n. (Savignano sul Panaro [MO], Tipolitografia F.G.), 1978.</big></p>
 
 <p><big><strong>DE GRADA</strong> [<strong><i>junior</i></strong>]<strong>, Raffaele - EICHINGER, Marie - BALLESTRI, Emilio</strong>: <strong><i>Domenico Simonini</i></strong>, Catalogo delle Mostre Personali (Wien, München, Hamburg, Brussel, Paris e Milano, 1980-1982), a cura della Galleria d’Arte “Jacopo Barozzi” di Vignola (MO) diretta da Emilio Ballestri e Franco Cuoghi, s.l., s.n. (Savignano sul Panaro [MO], Tipolitografia F.G.), 1980.</big></p>
@@ -72,9 +69,11 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/famiglia.jpg" width="520" height="720"></p><br>
 <p><big><big><center>Simonini a Saint-Tropez (1969).  </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/saintropez.jpg" width="520" height="750"></p><br>
+<p><big><big><center> Simonini, <i>Donna seduta</i>, olio su tela, 1969 o 1970. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
 <p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.  </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/band.jpg" width="850" height="600"></p><br>
-<p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i> (oggi in collezione privata).</center></big></big><br>
+<p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i> , da poco eseguito (oggi in collezione privata).</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
 <p><big><big><center>Simonini e Luciano Pavarotti nel 1990 al <i>Club Europa 92</i>, Modena, durante la personale dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pavarotto.jpg" width="870" height="630"></p><br>
@@ -86,13 +85,15 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
 <p><big><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/intervista.JPG" width="850" height="630"></p><br>
-<p><big><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al prossimo quadro, <i>Avventori ai tavolini esterni di un bar</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
-	<img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
+<p><big><big><center>Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022. (collezione privata).</center></big></big></p>
+<img src="img/celebri vignolesi/Pippo/pescherie.jpg" width="540" height="650"></p><br>
+<p><big><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al quadro <i>Paris, bistrot rue Mouftard</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
+<img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
+<p><big><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, collezione privata (2022).</center></big><br>
+<img src="img/celebri vignolesi/Pippo/quadrofinito.jpg" width="540" height="650"></p><br><br><br>
 
-<p><big><center> Simonini, <i>Donna seduta</i>, olio su tela, 1969 o 1970. Collezione privata.</center></big><br>
-<img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
-<p><big><center> Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022.<br> Questo quadro prossimamente prenderà la via di una collezione privata.</center></big></p>
-<img src="img/celebri vignolesi/Pippo/pescherie.jpg" width="540" height="650"></p><br><br><br>
+
+
 
 
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
