--- a/Pippo.html
+++ b/Pippo.html
@@ -79,7 +79,7 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/pavarotto.jpg" width="870" height="630"></p><br>
 <p><big><big><center>L’Artista con Raffaele De Grada <i>junior</i> e Maria Luisa Simone all’inizio degli anni Novanta.<br> Fonte: Archivio fotografico di Domenico Simonini.</center></big></big><br>
 	<img src="img/celebri vignolesi/Pippo/degrada.jpg" width="950" height="640"></p><br>
-<p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata scattata nel 1994 o nel 1995. Fonte: Archivio dell’Artista</center></big></big><br>
+<p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata scattata nel 1994 o nel 1995. Fonte: Archivio dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/Pipposeduto.jpg" width="500" height="770"></p><br>
 <p><big><big><center>Primo piano di Simonini (2019).</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
