--- a/febbraio.html
+++ b/febbraio.html
@@ -32,9 +32,9 @@
 <h3><big><strong>FEBBRAIO</big></strong></h3><br><br><br>
 	
 <p><big><strong>7 febbraio 1921</strong>: nacque a San Secondo Parmense <strong>ATTILIO NERI</strong>, medico pediatra, amministratore pubblico, cultore di storia locale e dei dialetti.<br><br>
-Questo personaggio apparteneva a una famiglia romagnola che si trasferì a Vignola quando egli aveva appena tre anni perché suo padre, <strong>Nèttore Neri</strong> (1883-1970), era stato nominato pretore di quel paese. Da allora, Attilio Neri visse sempre a Vignola, dove morì il 30 agosto 2009; fu sepolto presso il locale cimitero, nella cappella funeraria di famiglia.<br> 
+Questo personaggio apparteneva a una famiglia ravennate-bolognese che si trasferì a Vignola quando egli aveva appena tre anni perché suo padre, <strong>Nèttore Neri</strong> (1883-1970), era stato nominato pretore di quel paese. Da allora, Attilio Neri visse sempre a Vignola, dove morì il 30 agosto 2009; fu sepolto presso il locale cimitero, nella cappella funeraria di famiglia.<br> 
 
-Il nostro personaggio svolse per decenni la carriera professionale di medico pediatra presso l’ospedale di Vignola, ma in precedenza esercitò incarichi politico-amministrativi (di quel Comune fu, fra l’altro, sindaco dal 1951 al 1954). In campo sportivo, ebbe ruoli dirigenziali (per esempio, venne eletto presidente della squadra di calcio <i>U.S. Vignolese</i> poco prima dell’inizio della stagione 1959/1960). Si distinse nelle ricerche inerenti alle tradizioni e alla storia vignolesi, nonché negli studi sulla lessicografia dialettale, e mandò alle stampe diversi libri concernenti questi ambiti (compreso un importantissimo e fortunato <i>Vocabolario del dialetto modenese</i>: I ed., 1973; II ed., 1981).<br>  
+Il nostro personaggio svolse per decenni la carriera professionale di medico pediatra presso l’ospedale di Vignola, ma in precedenza esercitò incarichi politico-amministrativi (di quel Comune fu, fra l’altro, sindaco dal 1951 al 1954). In campo sportivo, ebbe ruoli dirigenziali (per esempio, tenne la presidenza della squadra calcistica <i>Unione Sportiva Vignolese</i> durante la stagione 1959/1960). Si distinse nelle ricerche inerenti alle tradizioni e alla storia vignolesi, nonché negli studi sulla lessicografia dialettale, e mandò alle stampe diversi libri concernenti questi ambiti (incluso un importantissimo e fortunato <i>Vocabolario del dialetto modenese</i>: I ed., 1973; II ed., 1981).<br>  
 
 Di notevole rilevanza è l’imponente collezione di fotografie e di cartoline raccolte da Neri, numerose delle quali immortalano Vignola, il suo territorio e i suoi abitanti lungo più di un secolo a partire dalla fine dell’Ottocento; il Fondo fotografico Attilio Neri è di proprietà dal 2002 del Comune di Vignola (la sua custodia fu subito affidata alla Biblioteca Comunale “Francesco Selmi”) e risulta interamente digitalizzato. Parecchie di queste immagini sono state riprodotte in miriadi di pubblicazioni uscite negli ultimi decenni, e hanno trovato più volte spazio in mostre allestite non solo nel Modenese.<br><br>  
 
@@ -88,7 +88,7 @@ Nell’immagine qui sotto, frontespizio di <i>Faléster dl’Inféren</i> (1951)
 
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
