--- a/Pippo.html
+++ b/Pippo.html
@@ -73,14 +73,38 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
 <p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.  </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/band.jpg" width="850" height="600"></p><br>
+<p><big><big><center>Simonini, senza nome, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/bagnacavallo.jpg" width="460" height="600"></p><br>
 <p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>, da poco eseguito (oggi in collezione privata).</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
+<p><big><big><center>Simonini, <i>Composizione</i>, olio su tela, 1984. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/incisione.jpg" width="500" height="570"></p><br>
+<p><big><big><center>Simonini, <i>Natura morta con rose</i>, olio su tela, 1990. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/simonini.jpg" width="450" height="530"></p><br>
 <p><big><big><center>Simonini e Luciano Pavarotti nel 1990 al <i>Club Europa 92</i>, Modena, durante la personale dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pavarotto.jpg" width="870" height="630"></p><br>
 <p><big><big><center>L’Artista con Raffaele De Grada <i>junior</i> e Maria Luisa Simone all’inizio degli anni Novanta.<br> Fonte: Archivio fotografico di Domenico Simonini.</center></big></big><br>
 	<img src="img/celebri vignolesi/Pippo/degrada.jpg" width="950" height="640"></p><br>
+<p><big><big><center>Simonini, <i>Le Sélect, Boulevard Montparnasse</i>, olio su tela, 1993. Collezione privata.</center></big></big><br>
+	<img src="img/celebri vignolesi/Pippo/Le Sélect.jpg" width="970" height="690"></p><br>
 <p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata scattata nel 1994 o 1995. Fonte: Archivio dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/Pipposeduto.jpg" width="500" height="770"></p><br>
+<p><big><big><center>Simonini, <i>Le Dôme</i>, olio su tela, 2003. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/le dome.jpg"></p><br>
+<p><big><big><center>Simonini, <i>Marché de Fleurs</i>, olio su tela, 2004. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/Marché du Fleurs.jpg"width="650" height="670"></p><br>
+<p><big><big><center>Simonini, <i>Il Panaro innevato</i>, olio su tela, 2005. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/Panaro.jpg" width="500" height="680"></p><br>
+<p><big><big><center>Simonini, <i>Mercato San Geminiano, Modena</i>, olio su tela, 2006. Collezione privata.</center></big></big><br>
+<img src="img/celebri vignolesi/Pippo/mercatomodena.jpg" width="650" height="670"></p><br>
+<p><big><big><center>Simonini, <i>Lucci e fiori in tavola</i>, olio su tela, 2008. Collezione privata.</center></big></big></p>
+<img src="img/celebri vignolesi/Pippo/Lucci e fiori in tavola.jpg" width="740" height="630"></p><br><p>
+<p><big><big><center>Simonini, <i>Les Deux Magots</i>, olio su tela, 2013. Collezione privata.</center></big></big></p>
+<img src="img/celebri vignolesi/Pippo/duemagotti.jpg" width="580" height="660"></p><br><p>
+<p><big><big><center>Simonini, <i>Odessa, Montparnasse</i>, olio su tela, 2015. Collezione privata.</center></big></big></p>
+<img src="img/celebri vignolesi/Pippo/odessa.jpg"></p><br>
+<p><big><big><center>Simonini, <i>Venezia</i>, olio su tela, 2016. Collezione privata.</center></big></big></p>
+<img src="img/celebri vignolesi/Pippo/venezia.jpg" width="500" height="650"></p><br>
 <p><big><big><center>Primo piano di Simonini (2019).</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
 <p><big><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big></big><br>
