--- a/Pippo.html
+++ b/Pippo.html
@@ -92,7 +92,7 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <p><big><big><center>Simonini, <i>Le Dôme</i>, olio su tela, 2003. Collezione privata.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/le dome.jpg"></p><br>
 <p><big><big><center>Simonini, <i>Marché de Fleurs</i>, olio su tela, 2004. Collezione privata.</center></big></big><br>
-<img src="img/celebri vignolesi/Pippo/Marché du Fleurs.jpg"width="650" height="670"></p><br>
+<img src="img/celebri vignolesi/Pippo/Marché du fleurs.jpg"width="650" height="670"></p><br>
 <p><big><big><center>Simonini, <i>Il Panaro innevato</i>, olio su tela, 2005. Collezione privata.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/Panaro.jpg" width="500" height="680"></p><br>
 <p><big><big><center>Simonini, <i>Mercato San Geminiano, Modena</i>, olio su tela, 2006. Collezione privata.</center></big></big><br>
