--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
 <i>Ogni popolo ha il dovere di presentare se stesso al mondo. Non mostrare niente di sé è un crimine nei confronti della propria cultura, è qualcosa di peggiore della morte, ed è una mancanza che la storia umana non perdona. Ogni popolo deve esprimere la parte migliore di sé. Lo spirito nobile, che è la parte più preziosa di quel popolo, sa andare oltre le necessità immediate che ha davanti a sé, per assumersi la responsabilità di trasmettere al mondo un invito a conoscere l’essenza della sua cultura. In questo sta la vera ricchezza</i>.<br>
                       <strong>Rabindranath Tagore</strong><br><br>
 
-<i>Noi non possiamo scegliere le nostre tradizioni, ma possiamo sapere che è nostro compito come esse vengono continuate</i>.<br>
+  <i>Noi non possiamo scegliere le nostre tradizioni, ma possiamo sapere che è nostro compito</i> come <i>esse vengono continuate</i>.<br>
                                          
                                        <strong>Jürgen Habermas</strong><br><br>
 
