--- a/Paradisi.html
+++ b/Paradisi.html
@@ -142,6 +142,8 @@ Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/prolusione.jpg" width="400" height="550"></center><br><br>
 <p><big><big><center>Frontespizio di <i>Elogio del principe Raimondo Montecuccoli</i>, Bologna, Dalla Stamperia di Lelio dalla Volpe, 1776.<br> Fonte: google.com<center></big></big></p>	
 <center><img src="img/celebri vignolesi/Paradisi/Elogio.jpg" width="340" height="600"></center><br><br>
+<p><big><big><center>Frontespizio del primo tomo di <i>Poesie e prose scelte del conte Agostino Paradisi</i>, 2 tt.,<br> Reggio [Emilia], Per Pietro Fiaccadori, 1827. Fonte: google.com<center></big></big></p>	
+<center><img src="img/celebri vignolesi/Paradisi/content.jpg" width="380" height="600"></center><br><br>	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></center></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
