--- a/Roli.html
+++ b/Roli.html
@@ -53,7 +53,9 @@ Il Gruppo di Documentazione “Mezaluna - Mario Menabue” di Vignola e la famig
 
 <p><center><big><big>Fotografia che ritrae Roli nella prima maturità.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Roli Ugo/roligiovane.jpg" width="500" height="680"></center><br><br>
-	<p><center><big><big>Frontespizio di <i>Faléster dl’Inféren</i> (1951), opera in versi (dialettali e italiani) di Roli.</big></big></center><br>
+	<p><center><big><big>Prima di copertina di Ugo Roli (Fiordaliso), <i>Faléster. Poesie dialettali modenesi</i>, prefazione del gr. uff. on. Fausto Bianchi,<br> Modena, Dante Cavallotti, 1936; le xilografie sono di Benito Boccolari. Fonte: google.com</big></big></center><br>
+		<center><img src="img/celebri vignolesi/Roli Ugo/prima.jpg"></center><br><br>
+	<p><center><big><big>Prima di copertina di Ugo Roli (Fiordaliso), <i>Faléster dl’Inféren (immagini dantesche nella fantasia popolare)</i>.<br> <i>Poesie in dialetto modenese</i>, presentazione di Filippo Fichera, Modena, Dante Cavallotti, 1951;<br> la prima di copertina e i disegni sono di Mario Molinari, mentre le xilografie sono di Benito Boccolari.<br> A dispetto della dicitura contenuta nell'intitolazione, l'opera contiene anche versi in italiano. Fonte: collezione privata.</big></big></center><br>
 		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br>
 <p><center><big><big>Locandina ufficiale della mostra vignolese su Roli (ottobre 2017). Fonte: google.com</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Roli Ugo/locandina.jpg" width="500" height="700"></center><br><br>
@@ -63,7 +65,7 @@ Il Gruppo di Documentazione “Mezaluna - Mario Menabue” di Vignola e la famig
 	<center><img src="img/celebri vignolesi/Roli Ugo/particolare.jpg" width="500" height="700"></center><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail:<a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
