--- a/febbraio.html
+++ b/febbraio.html
@@ -73,18 +73,18 @@ Nell’immagine sottostante, Caterina Piotti Pìrola (1800-1842?), ritratto post
 <p><strong><big><big><center>Vuoi saperne di più su Giacomo Cantelli?<br>Allora, visita il suo <a href="Cantelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br><br>
 
 <p><big><strong>23 febbraio 1887</strong>: nacque a Vignola <strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo.<br><br>
-Ugo Roli iniziò la sua carriera lavorativa come maestro elementare. In seguito, svolse la professione forense a Vignola e a Modena. Fu anche commissario prefettizio nel paese natale. Si fece notare a livello italiano come enigmografo (con lo pseudonimo di «Fiordaliso») e autore di libri scolastici per le Elementari.<br>
+Ugo Roli iniziò la sua carriera lavorativa come maestro elementare. In seguito, svolse la professione forense a Vignola e a Modena. Fu anche commissario prefettizio nel paese natale. Si fece notare a livello italiano come enigmografo (con lo pseudonimo di «Fiordaliso») e come autore di libri scolastici per le Elementari.<br>
 
 Roli partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore e fece numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (edite nel 1933) e venne decorato – fra l’altro – con la Medaglia d’Argento al Valor Militare.<br>  
 
 Nel 1919 questo personaggio fu uno dei fondatori del “Circolo Amicizia” di Vignola, sodalizio che trovò sede all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – a essere più esatti – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi). Ne diventò il primo presidente.<br>
 
-In vita, non solo nel suo paese natale, Roli era apprezzato soprattutto come solerte cultore di memorie patrie, attento studioso di storia locale e provetto verseggiatore. La sua fama di valente e ingegnoso poeta dialettale resiste ancora oggi.<br>  
+In vita, non solo nel suo paese natale, Roli era apprezzato soprattutto come solerte cultore di memorie patrie, attento studioso di storia locale e provetto verseggiatore. La sua fama di valente e ingegnoso poeta in dialetto resiste ancora oggi.<br>  
 
 Il nostro personaggio morì a Vignola il 25 giugno 1959 e fu sepolto nel camposanto cittadino.<br><br>
 
-Nell’immagine qui sotto, frontespizio di <i>Faléster dl’Inféren</i> (1951), opera in versi (dialettali e italiani) di Ugo Roli.</big></p><br>
-		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br><br>
+Nell’immagine qui sotto, prima di copertina di Ugo Roli (Fiordaliso), <i>Faléster dl’Inféren (immagini dantesche nella fantasia popolare). Poesie in dialetto modenese</i>, presentazione di Filippo Fichera, Modena, Dante Cavallotti, 1951; la prima copertina e i disegni sono di Mario Molinari, mentre l'autore delle xilografie è Benito Boccolari. Si tenga presente che «Faléster» in vernacolo sta per l'italiano “faville”, che nell'opera sono contenuti anche versi in italiano e che in questa prima di copertina si usa la forma «d' l'Inféren». Fonte: collezione privata.</big></p><br>
+<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
